# research_agent

./: .env  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/analysis/: comparator.py  gap_detector.py
app/api/: dependencies.py  routes.py
app/api/routes/: auth.py  papers.py  reports.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: chunk.py  comparision_result.py  paper.py  raw_paper.py  report.py  user.py
app/pipeline/: run_pipeline.py
app/schemas/: user.py
app/services/: arxiv.py  arxiv_client.py  comparator.py  extractor.py  llm.py
app/utils/: helpers.py  json_utils.py
frontend/: index.html  script.js  style.css
frontend/html/: inde.html
frontend/js/: api.js
